1-1. 신호의 수학적 표현

--- a/Part1. DSP/1_Intro.ipynb
+++ b/Part1. DSP/1_Intro.ipynb
@@ -54,23 +54,12 @@
     "와 같이 표현할 수 있고, $T_s$는 **샘플링 주기(sampling period)** 이다.  \n",
     "\n",
     "### 시스템의 수학적 표현\n",
-    "시스템은 신호를 새로운 신호 또는 다른 신호 표현으로 변형 시킨다.  \n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1-2. 시스템"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1-3. 복소수"
+    "시스템은 신호를 새로운 신호 또는 다른 신호 표현으로 변형 시킨다.  \n",
+    "$$y(t) = \\mathcal{T}\\{x(t)\\} $$  \n",
+    "입력 신호 $x(t)$를 받아, 이에 대응하는 출력 신호 $y(t)$를 발생 시키는 신호를 수학적으로 표현하면 위와 같다.  \n",
+    "연속시간 신호와 이산시간 신호 간의 샘플링 관계를 적용하면, 샘플러(sampler)를 입력이 연속시간 신호 $x(t)$, 출력이 이에 대응하는 샘플의 수열을 갖는 시스템으로 아래와 같이 정의할 수 있다.  \n",
+    "$$x[n] = x(nT_s)$$  \n",
+    "이는 이상적인 연속-이산 변환기(ideal C/D converter)라고 하기도 한다."
    ]
   }
  ],
