--- a/Part2. DASP/2_STFT.ipynb
+++ b/Part2. DASP/2_STFT.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "window 크기를 작게 할 수록 시간축을 잘게 나눈다는 뜻이니 time resolution이 증가하고 반대로 window 크기를 키우면 frequency resolution이 증가합니다.\n",
     "\n",
-    "![Untitled](DSP_1/STFT_.png)\n",
+    "![Untitled](DSP_1/stft_.png)\n",
     "\n",
     "### 파이썬 구현\n",
     "\n",
