--- a/Part1. DSP/2_Sinusoids.ipynb
+++ b/Part1. DSP/2_Sinusoids.ipynb
@@ -361,15 +361,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2-4. 페이저 합"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2-5. 시간 신호"
+    "## 2-4. 페이저 합\n",
+    "여러개의 정현파의 합을 구하는 경우가 자주 발생하는데, 같은 주파수를 갖는 신호의 합은 간단하게 구할 수 있다.  \n",
+    "같은 주파수를 갖더라도 진폭과 위상은 다른 정현파들의 합을 구하는 방법을 개발하는 것은 유용하다.  \n",
+    "\n",
+    "$$\\sum_{k=1}^N A_k cos(\\omega_0t + \\phi) = Acos(\\omega_0t + \\phi)$$  \n",
+    "\n",
+    "주파수는 같고 진폭과 위상 변이가 다른 N개의 코사인 신호를 합하면, 그 주파수를 같는 하나의 코사인 신호가 된다는 것을 나타낸다.  \n",
+    "위 식은, 삼각함수의 등식을 이용해 증명할 수 있는데 과정은 다음과 같다.  \n",
+    "$$A_kcos(\\omega_0t+\\phi_k) = A_k cos\\phi_k cos(\\omega_0t) - A_k sin\\phi_k sin(\\omega_0t)$$  \n",
+    "신호의 합을 사인과 코사인으로 먼저 풀고, 사인과 코사인의 계수를 각각 모두 합친 후, 위 식의 역방향을 이용하면 된다.\n",
+    "\n",
+    "### 복소수의 합\n",
+    "두 개의 복소수를 합할 때는 직교좌표형을 사용해야하는데, 이때 합의 실수부와 허수부는 각각 실수부의 합과 허수부의 합이다.  \n",
+    "식, $$\\sum_{k=1}^N A_k cos(\\omega_0t + \\phi) = Acos(\\omega_0t + \\phi)$$에서 $\\sum_{k=1}^N A_k e^{j\\phi_k} = Ae^{j\\phi}$를 대입하면 진폭 A와 위상 $\\phi$를 구할 수 있다.  \n",
+    "대입하는 식은 페이저 합 규칙의 중요한 내용을 포함하고 있는데,  \n",
+    "1. 어떤 정현파도 하기 형태로 표현 가능하다. <br> $Acos(\\omega_0t+\\phi) = \\Re e\\{Ae^{j(\\omega_0t+\\phi)}\\} = \\Re e \\{Ae^{j\\phi} e^{j\\omega_0t}\\}$\n",
+    "2. 복소수 집합 {$X_k$}에 대해서도 실수부의 합은 합의 실수부와 같다. <br> $\\Re e\\{\\sum_{k=1}^N X_k\\} = \\sum_{k=1}^N \\Re e\\{X_k\\}$"
    ]
   }
  ],
